--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -101,14 +101,17 @@
         width: 68vw;
       }
       @media (max-width: 980px) {
-        height: 42vh;
+        height: 32rem;
+        width: 60rem;
       }
       @media (max-width: 780px) {
-        height: 52vh;
-        width: 82vw;
+        margin: 0;
+        height: 28rem;
+        width: 50rem;
       }
       @media (max-width: 580px) {
-        height: 78vh;
+        height: 25rem;
+        width: 40rem;
       }
 
       .bg {
@@ -116,6 +119,7 @@
         justify-content: center;
         mix-blend-mode: multiply;
         opacity: .6;
+        transform: scale(1.4, 1.4);
         //background: #d3d3d3;
         background: #0E7A86;
       }
@@ -135,8 +139,19 @@
           top: 30%;
         }
         @media (max-width: 580px) {
+          width: 68%;
           top: 30%;
-          left: 25%;
+          left: 18%;
+        }
+        @media (max-width: 480px) {
+          width: 50%;
+          top: 30%;
+          left: 12%;
+        }
+        @media (max-width: 380px) {
+          width: 50%;
+          top: 40%;
+          left: 12%;
         }
         
         .name {
@@ -171,14 +186,17 @@
         width: 68vw;
       }
       @media (max-width: 980px) {
-        height: 42vh;
+        height: 32rem;
+        width: 60rem;
       }
       @media (max-width: 780px) {
-        height: 52vh;
-        width: 82vw;
+        margin: 0;
+        height: 28rem;
+        width: 50rem;
       }
       @media (max-width: 580px) {
-        height: 78vh;
+        height: 25rem;
+        width: 40rem;
       }
 
       .bg {
@@ -186,6 +204,7 @@
         justify-content: center;
         mix-blend-mode: multiply;
         opacity: .6;
+        transform: scale(1.4, 1.4);
         // background: lightgray;
         background: #0E7A86;
       }
@@ -205,8 +224,19 @@
           top: 30%;
         }
         @media (max-width: 580px) {
+          width: 68%;
           top: 30%;
-          left: 25%;
+          left: 18%;
+        }
+        @media (max-width: 480px) {
+          width: 50%;
+          top: 30%;
+          left: 12%;
+        }
+        @media (max-width: 380px) {
+          width: 50%;
+          top: 40%;
+          left: 12%;
         }
         
         .name {
