--- a/scss/_how-we-work.scss
+++ b/scss/_how-we-work.scss
@@ -178,6 +178,16 @@
 
       p {
         font-size: clamp(100px, 24vw, 220px);
+
+        @media (max-width: 1340px) {
+          font-size: clamp(80px, 20vw, 180px);
+        }
+        @media (max-width: 1080px) {
+          font-size: clamp(70px, 18vw, 150px);
+        }
+        @media (max-width: 980px) {
+          font-size: clamp(50px, 15vw, 120px);
+        }
       }
     }
 
@@ -227,7 +237,8 @@
           position: absolute;
           height: fit-content;
           width: fit-content;
-          background-color: yellow;
+          // background-color: yellow;
+          background-color: $color-darkBlue;
           transform: translateX(-20vw);
 
           .swiper-wrapper {
