--- a/scss/_how-we-work.scss
+++ b/scss/_how-we-work.scss
@@ -328,334 +328,338 @@
             }
           }
         }
+      }
+    }
 
-        .modal {
-          position: absolute;
-          background-color: $color-darkBlue;
-          //transform: translateX(-20vw);
+    .modal {
+      position: fixed;
+      // background-color: green;
+      background-color: $color-darkBlue;
+      //transform: translateX(-20vw);
+      top: 0%;
+      left: 0;
+      height: 100vh;
 
-          .swiper-wrapper {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            height: 70vh;
-            width: 100vw;
+      .swiper-wrapper {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        height: 100vh;
+        width: 100vw;
 
-            gap: 30vw;
+        gap: 30vw;
 
-            // FREDERIKS
-            .work-slide-item-fred-first {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
+        // FREDERIKS
+        .work-slide-item-fred-first {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
 
-              display: flex;
-              justify-content: center;
-              align-items: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
 
-              background: url("/fredriks/pasta.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
+          background: url("/fredriks/pasta.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
 
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-fred-second {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-fred-second {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
 
-              display: flex;
-              justify-content: center;
-              align-items: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
 
-              background: url("/fredriks/sizzle.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
+          background: url("/fredriks/sizzle.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
 
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-fred-third {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-fred-third {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
 
-              display: flex;
-              justify-content: center;
-              align-items: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
 
-              background: url("/fredriks/taco.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
+          background: url("/fredriks/taco.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
 
-              &:hover {
-                cursor: pointer;
-              }
-            }
-
-            // MEIJER
-            .work-slide-item-mei-first {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/meijer/burger.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-mei-second {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/meijer/ice-cream.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-mei-third {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/meijer/sizzle.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-
-            // THYME
-            .work-slide-item-thyme-first {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/thyme/ftm-long-form.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-thyme-second {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/thyme/salmon.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-thyme-third {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/thyme/steack.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-
-            // BRAND
-            .work-slide-item-brand-first {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/thyme/ftm-long-form.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-brand-second {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/thyme/salmon.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-brand-third {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/thyme/steack.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-
-            // WIGGLES
-            .work-slide-item-wig-first {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/wiggles/dance.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-wig-second {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/wiggles/dole-jokes.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-            .work-slide-item-wig-third {
-              border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
-              height: 70vh;
-              width: 60vw;
-              overflow: hidden;
-
-              display: flex;
-              justify-content: center;
-              align-items: center;
-
-              background: url("/wiggles/tickle.jpg");
-              background-position: center;
-              background-repeat: no-repeat;
-              background-size: cover;
-
-              &:hover {
-                cursor: pointer;
-              }
-            }
-
-            .video {
-              z-index: 100;
-              opacity: 1;
-              height: 100%;
-              width: 100%;
-              margin-bottom: 4vh;
-            }
-
-            .hidden {
-              opacity: 0;
-            }
+          &:hover {
+            cursor: pointer;
           }
         }
 
+        // MEIJER
+        .work-slide-item-mei-first {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/meijer/burger.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-mei-second {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/meijer/ice-cream.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-mei-third {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/meijer/sizzle.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+
+        // THYME
+        .work-slide-item-thyme-first {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/thyme/ftm-long-form.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-thyme-second {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/thyme/salmon.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-thyme-third {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/thyme/steack.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+
+        // BRAND
+        .work-slide-item-brand-first {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/thyme/ftm-long-form.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-brand-second {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/thyme/salmon.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-brand-third {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/thyme/steack.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+
+        // WIGGLES
+        .work-slide-item-wig-first {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/wiggles/dance.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-wig-second {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/wiggles/dole-jokes.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+        .work-slide-item-wig-third {
+          border-radius: 5% 5% 5% 5% / 8% 8% 8% 8%;
+          height: 70vh;
+          width: 60vw;
+          overflow: hidden;
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          background: url("/wiggles/tickle.jpg");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+
+          &:hover {
+            cursor: pointer;
+          }
+        }
+
+        .video {
+          z-index: 100;
+          opacity: 1;
+          height: 100%;
+          width: 100%;
+          margin-bottom: 4vh;
+        }
+
         .hidden {
-          display: none;
+          opacity: 0;
         }
       }
+    }
+
+    .hidden {
+      display: none;
     }
   }
 }
