--- a/scss/_how-we-work.scss
+++ b/scss/_how-we-work.scss
@@ -180,6 +180,7 @@
 
   .our-work-wrapper {
     margin-top: 120vh;
+    //margin-bottom: 120vh;
     width: 100vw;
     color: $color-orange;
     font-family: "komet", sans-serif;
@@ -233,7 +234,7 @@
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover;
-  
+
           &:hover {
             cursor: pointer;
           }
@@ -377,10 +378,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/fredriks/pasta.jpg");
+          /* background: url("/fredriks/pasta.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -396,10 +398,12 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/fredriks/sizzle.jpg");
+          /* background: url("/fredriks/sizzle.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -415,10 +419,12 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/fredriks/taco.jpg");
+          /* background: url("/fredriks/taco.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -436,10 +442,12 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/meijer/burger.jpg");
+          /* background: url("/meijer/burger.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -455,10 +463,12 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/meijer/ice-cream.jpg");
+          /* background: url("/meijer/ice-cream.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -474,10 +484,12 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/meijer/sizzle.jpg");
+          /* background: url("/meijer/sizzle.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -493,10 +505,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/meijer/sizzle.jpg");
+          /* background: url("/meijer/sizzle.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -512,10 +525,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/meijer/sizzle.jpg");
+          /* background: url("/meijer/sizzle.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -533,10 +547,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/thyme/ftm-long-form.jpg");
+          /* background: url("/thyme/ftm-long-form.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -552,10 +567,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/thyme/salmon.jpg");
+          /* background: url("/thyme/salmon.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -571,10 +587,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/thyme/steack.jpg");
+          /* background: url("/thyme/steack.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -592,10 +609,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/thyme/ftm-long-form.jpg");
+          /* background: url("/thyme/ftm-long-form.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -611,10 +629,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/thyme/salmon.jpg");
+          /* background: url("/thyme/salmon.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -630,10 +649,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/thyme/steack.jpg");
+          /* background: url("/thyme/steack.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -651,10 +671,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/wiggles/dance.jpg");
+          /* background: url("/wiggles/dance.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -670,10 +691,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/wiggles/dole-jokes.jpg");
+          /* background: url("/wiggles/dole-jokes.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -689,10 +711,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/wiggles/tickle.jpg");
+          /* background: url("/wiggles/tickle.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -710,10 +733,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/wiggles/dance.jpg");
+          /* background: url("/wiggles/dance.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -729,10 +753,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/wiggles/dole-jokes.jpg");
+          /* background: url("/wiggles/dole-jokes.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -748,10 +773,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/wiggles/tickle.jpg");
+          /* background: url("/wiggles/tickle.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -770,10 +796,11 @@
           justify-content: center;
           align-items: center;
 
-          background: url("/wiggles/dance.jpg");
+          /* background: url("/wiggles/dance.jpg");
           background-position: center;
           background-repeat: no-repeat;
-          background-size: cover;
+          background-size: cover; */
+          background-color: #000;
 
           &:hover {
             cursor: pointer;
@@ -791,11 +818,12 @@
             margin-top: -1vh;
             width: 100%;
             height: 73vh;
+            // filter: brightness(100%);
           }
         }
 
         .video-hidden {
-          opacity: 0;
+          opacity: 1;
         }
       }
     }
